--- a/login.html
+++ b/login.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>interactive login form</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="login.js"></script>
+    <link rel="stylesheet" href="./CSS/login.css" />
+    <script src="./JavaScript/login.js"></script>
   </head>
   <body>
-    <form class="box" action="ResumePage.html" method="post">
+    <form class="box" action="#" method="post">
       <h1>login form</h1>
       <input type="text" placeholder="enter username" id="username" />
       <input type="password" placeholder="enter password" id="password" />
