--- a/signup.html
+++ b/signup.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>interactive login form</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="login.js"></script>
+    <link rel="stylesheet" href="./CSS/login.css" />
+    <script src="./JS/login.js"></script>
   </head>
   <body>
     <form class="box" action="login.html" method="post">
