--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <script src="./JavaScript/login.js"></script>
   </head>
   <body>
-    <form class="box" action="#" method="post">
+    <form class="box" action="./resumes-list.html" method="post">
       <h1>login form</h1>
       <input type="text" placeholder="enter username" id="username" />
       <input type="password" placeholder="enter password" id="password" />
