--- a/signup.html
+++ b/signup.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>interactive login form</title>
     <link rel="stylesheet" href="./CSS/login.css" />
-    <script src="./JS/login.js"></script>
+    <script src="./JavaScript/login.js"></script>
   </head>
   <body>
-    <form class="box" action="login.html" method="post">
+    <form class="box" action="./login.html" method="post">
       <h1>Sign up form</h1>
       <input type="text" placeholder="Enter username" id="user" />
       <input type="password" placeholder="enter password" id="pass" />
